JPA/10.OQL.md updated from https://stackedit.io/

--- a/JPA/10.OQL.md
+++ b/JPA/10.OQL.md
@@ -27,7 +27,7 @@
 		- 비표준 오픈소스 프레임워크
 	- JDBC 직접 사용, MyBatis 같은 SQL 매퍼 프레임워크
 ### 10.1.1 JPQL 소개
-- 정의 : 엔티티 객체를 조회하는 객체지향 쿼리
+- 정의 : **엔티티 객체를 조회하는 객체지향 쿼리**
 - 특징
 	- SQL을 추상화해서 특정 DB에 의존하지 않음
 		- DB dialect (방언) 만 변경하면 JPQL을 수정하지 않아도 DB 변경 가능
@@ -73,14 +73,25 @@
 ### 10.1.2 Criteria 쿼리 소개
 - 정의 : **JPQL을 생성하는 빌더 클래스**
 - 장점
-	- 프로그래밍 코드로 JPQL을 작성할 수 있다는 것 (컴파일 시에 오류 발견 가능)
+	- 프로그래밍 코드로 JPQL을 작성할 수 있다는 것 (**컴파일 시에 오류 발견 가능**)
 		- ex) query.select(m).where(...)
 	- IDE를 사용하면 코드 자동완성을 지원
 	- 동적 쿼리를 작성하기 편함
 - 문자 기반 쿼리의 단점
 	- 런타임 시점까지 오타를 잡지 못함
 	- ex) select m from Membeeee m 처럼 오타가 있어도 컴파일 시에는 잡지 못함
-- 
+- ex)
+	```
+	select
+		member.id as id,
+		member.age as age,
+		member.team_id as team,
+		membebr.name as name
+	from
+		Member member
+	where
+		member.name='kim'
+	```
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTIxMjk5NjYzMCw3MzA5OTgxMTZdfQ==
+eyJoaXN0b3J5IjpbLTEwMTExNjYzOTgsNzMwOTk4MTE2XX0=
 -->
