JPA/10.OQL.md updated from https://stackedit.io/

--- a/JPA/10.OQL.md
+++ b/JPA/10.OQL.md
@@ -82,16 +82,16 @@
 	- ex) select m from Membeeee m 처럼 오타가 있어도 컴파일 시에는 잡지 못함
 - ex)
 	```
-	select
-		member.id as id,
-		member.age as age,
-		member.team_id as team,
-		membebr.name as name
-	from
-		Member member
-	where
-		member.name='kim'
+	// Criteria 사용 준비
+	CriteriaBuilder cb = em.getCriteriaBuilder();
+	CriteriaQuery<Member> query = db.createQuery(Member.class);
+
+	// 루트 클래스 (조회를 시작할 클래스)
+	Root<Member> m = query.from(Member.class);
+
+	// 쿼리 생성
+	CriteriaQ
 	```
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTEwMTExNjYzOTgsNzMwOTk4MTE2XX0=
+eyJoaXN0b3J5IjpbLTUzNTcxNzM4MCw3MzA5OTgxMTZdfQ==
 -->
