JPA/10.OQL.md updated from https://stackedit.io/

--- a/JPA/10.OQL.md
+++ b/JPA/10.OQL.md
@@ -90,8 +90,11 @@
 	Root<Member> m = query.from(Member.class);
 
 	// 쿼리 생성
-	CriteriaQ
+	CriteriaQurey<Member> cq = query.select(m).where(cb.equal(m.get("username"), "kim"));
+	List<Member> resultList = em.createQuery(cq).getResultList();
 	```
+	- 쿼리가 문자가 아니라 코드로 짜여짐
+		- m.get("username") 도 코드로 작성하고 싶으면 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTUzNTcxNzM4MCw3MzA5OTgxMTZdfQ==
+eyJoaXN0b3J5IjpbODgzMTU0NDQ0LDczMDk5ODExNl19
 -->
