--- a/JPA/10.OQL.md
+++ b/JPA/10.OQL.md
@@ -94,7 +94,9 @@
 	List<Member> resultList = em.createQuery(cq).getResultList();
 	```
 	- 쿼리가 문자가 아니라 코드로 짜여짐
-		- m.get("username") 도 코드로 작성하고 싶으면 
+		- m.get("username") 도 코드로 작성하고 싶으면 메타 모델 (MetaModel)을 사용하면 됨
+- 메타 모델 API
+	- JPA는 어노테이션 프로세스 기능을 통해 어노테이션을 분석해서 Member 엔티티 클래스로부터 Member_라는 Criteria 전용 클래스를 생성함 -> 이것이 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbODgzMTU0NDQ0LDczMDk5ODExNl19
+eyJoaXN0b3J5IjpbMTQyNTA2ODY1LDczMDk5ODExNl19
 -->
