JPA/10.OQL.md updated from https://stackedit.io/

--- a/JPA/10.OQL.md
+++ b/JPA/10.OQL.md
@@ -95,8 +95,11 @@
 	```
 	- 쿼리가 문자가 아니라 코드로 짜여짐
 		- m.get("username") 도 코드로 작성하고 싶으면 메타 모델 (MetaModel)을 사용하면 됨
-- 메타 모델 API
-	- JPA는 어노테이션 프로세스 기능을 통해 어노테이션을 분석해서 Member 엔티티 클래스로부터 Member_라는 Criteria 전용 클래스를 생성함 -> 이것이 
+- **메타 모델** API
+	- **JPA는 *어노테이션 프로세서* 기능을 통해 어노테이션을 분석해서 Member 엔티티 클래스로부터 Member_라는 Criteria 전용 클래스를 생성**함 -> 이것이 메타 모델
+	- 온전히 코드만 사용해서 쿼리 생성 가능
+		- ex) m.get("username") -> m.get(Member_.username)
+	- 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTQyNTA2ODY1LDczMDk5ODExNl19
+eyJoaXN0b3J5IjpbNTM3MDY3MDM4LDczMDk5ODExNl19
 -->
