JPA/10.OQL.md updated from https://stackedit.io/

--- a/JPA/10.OQL.md
+++ b/JPA/10.OQL.md
@@ -75,8 +75,9 @@
 - 장점
 	- 프로그래밍 코드로 JPQL을 작성할 수 있다는 것 (**컴파일 시에 오류 발견 가능**)
 		- ex) query.select(m).where(...)
-	- IDE를 사용하면 코드 자동완성을 지원
-	- 동적 쿼리를 작성하기 편함
+	- IDE를 사용하면 **코드 자동완성을 지원**
+	- **동적 쿼리를 작성하기 편함**
+		- 코드로 쿼리를 작성하기 때문
 - 문자 기반 쿼리의 단점
 	- 런타임 시점까지 오타를 잡지 못함
 	- ex) select m from Membeeee m 처럼 오타가 있어도 컴파일 시에는 잡지 못함
@@ -96,10 +97,13 @@
 	- 쿼리가 문자가 아니라 코드로 짜여짐
 		- m.get("username") 도 코드로 작성하고 싶으면 메타 모델 (MetaModel)을 사용하면 됨
 - **메타 모델** API
-	- **JPA는 *어노테이션 프로세서* 기능을 통해 어노테이션을 분석해서 Member 엔티티 클래스로부터 Member_라는 Criteria 전용 클래스를 생성**함 -> 이것이 메타 모델
+	- **JPA는 *어노테이션 프로세서* 기능을 통해 어노테이션을 분석해서 Member 엔티티 클래스로부터 *Member_라는 Criteria 전용 클래스를 생성함*** -> 이것이 메타 모델
 	- 온전히 코드만 사용해서 쿼리 생성 가능
 		- ex) m.get("username") -> m.get(Member_.username)
-	- 
+- 단점
+	- 복잡하고 장황함 = 사용하기 불편함
+	- Criteria로 작성한 코드는 한 눈에 들어오지 않음
+###
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbNTM3MDY3MDM4LDczMDk5ODExNl19
+eyJoaXN0b3J5IjpbLTEyNTQ3MzY0MTEsNzMwOTk4MTE2XX0=
 -->
