JPA/10.OQL.md updated from https://stackedit.io/

--- a/JPA/10.OQL.md
+++ b/JPA/10.OQL.md
@@ -103,7 +103,16 @@
 - 단점
 	- 복잡하고 장황함 = 사용하기 불편함
 	- Criteria로 작성한 코드는 한 눈에 들어오지 않음
-###
+### 10.1.3 QueryDSL 소개
+- 정의 : JPQL 빌더
+- 장점
+	- 코드 기반
+	- 단순하고 사용하기 쉬움
+	- 작성한 코드가 JPQL과 비슷해서 한눈에 들어옴
+- 참고
+	- QueryDSL 은 JPA 표준은 아니고 오픈소스 프로젝트
+- ex)
+
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTEyNTQ3MzY0MTEsNzMwOTk4MTE2XX0=
+eyJoaXN0b3J5IjpbNzA3MzkyOTM0LDczMDk5ODExNl19
 -->
