JPA/10.OQL.md updated from https://stackedit.io/

--- a/JPA/10.OQL.md
+++ b/JPA/10.OQL.md
@@ -112,7 +112,17 @@
 - 참고
 	- QueryDSL 은 JPA 표준은 아니고 오픈소스 프로젝트
 - ex)
+	```
+	// 준비
+	JPAQuery query = new JPAQuery(em);
+	QMember member = QMember.member;
+
+	// 쿼리, 결과조회
+	List<Member> members = query.from(member)
+								.where(member.username.eq("kim"))
+								.list(member);
+	```
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbNzA3MzkyOTM0LDczMDk5ODExNl19
+eyJoaXN0b3J5IjpbLTYxNTY0MDc2LDczMDk5ODExNl19
 -->
