JPA/10.OQL.md updated from https://stackedit.io/

--- a/JPA/10.OQL.md
+++ b/JPA/10.OQL.md
@@ -122,7 +122,11 @@
 								.where(member.username.eq("kim"))
 								.list(member);
 	```
-
+- 어노테이션 프로세서를 사용해서 쿼리 전용 클래스를 만들어야 함
+	- 위 예제의 QMember 는 Member 엔티티 클래스를 기반으로 생성한 QueryDSL 쿼리 전용 클래스
+### 10.1.4 네이티브 SQL 소개
+- 정의 : SQL을 직접 사용할 수 있는 기능
+- 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTYxNTY0MDc2LDczMDk5ODExNl19
+eyJoaXN0b3J5IjpbMTEwNjYxODQ0MSw3MzA5OTgxMTZdfQ==
 -->
