JPA/10.OQL.md updated from https://stackedit.io/

--- a/JPA/10.OQL.md
+++ b/JPA/10.OQL.md
@@ -126,7 +126,11 @@
 	- 위 예제의 QMember 는 Member 엔티티 클래스를 기반으로 생성한 QueryDSL 쿼리 전용 클래스
 ### 10.1.4 네이티브 SQL 소개
 - 정의 : SQL을 직접 사용할 수 있는 기능
-- 
+- 사용ㅎ
+- 특정 DB에 의존하는 기능을 사용해야 할 때 사용
+	- ex) oracle에만 있는 connect by나 특정 DB에서만 동작하는 SQL 힌트 같은 것 (하이버네이트는 SQL 힌트를 지원함)
+	- 이런 건 표준화 되어 있지 않아서 JPQL에서 사용할 수 없음
+- SQL은 지원하지만 JPQL은 지원하지 않는 경우
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTEwNjYxODQ0MSw3MzA5OTgxMTZdfQ==
+eyJoaXN0b3J5IjpbLTEzMDQ3MjE4NjEsNzMwOTk4MTE2XX0=
 -->
