JPA/10.OQL.md updated from https://stackedit.io/

--- a/JPA/10.OQL.md
+++ b/JPA/10.OQL.md
@@ -136,8 +136,10 @@
 		- = DB를 변경하면 네이티브 SQL도 수정해야 한다
 	```
 	String sql = "SELECT ID, AGE, TEAM_ID, NAME FROM MEMBER WHERE NAME = 'kim'";
-	
+	List<Member> resultList = em.createNativeQuery(sql, Member.class).getResultList();
 	```
+### 10.1.5 JDBC 직접 사용, 마이바티스 같은 SQL 매퍼 프레임워크 사용
+- 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTE0NTI3MDYzNTgsNzMwOTk4MTE2XX0=
+eyJoaXN0b3J5IjpbMjA5NzgyODYwMiw3MzA5OTgxMTZdfQ==
 -->
