--- a/JPA/10.OQL.md
+++ b/JPA/10.OQL.md
@@ -139,7 +139,13 @@
 	List<Member> resultList = em.createNativeQuery(sql, Member.class).getResultList();
 	```
 ### 10.1.5 JDBC 직접 사용, 마이바티스 같은 SQL 매퍼 프레임워크 사용
-- 
+- JPA 구현체가 제공하는 방법을 사용해서 직접 DB 접근
+	- JPA는 JDBC 커넥션을 획득하는 API를 제공하지 않으므로
+- ex) 하이버네이트에서 직접 JDBX Connection을 획득하는 방법
+	```
+	Ses
+	```
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMjA5NzgyODYwMiw3MzA5OTgxMTZdfQ==
+eyJoaXN0b3J5IjpbMTA1NzUxMDc5NywyMDk3ODI4NjAyLDczMD
+k5ODExNl19
 -->
