--- a/JPA/10.OQL.md
+++ b/JPA/10.OQL.md
@@ -143,9 +143,16 @@
 	- JPA는 JDBC 커넥션을 획득하는 API를 제공하지 않으므로
 - ex) 하이버네이트에서 직접 JDBX Connection을 획득하는 방법
 	```
-	Ses
+	Session session = entityManager.unwrap(Session.class);
+	session.doWork(new Work() {
+		@Override
+		public void execute(Connection connection) throws SQLException {
+			// work...
+		}
+	});
 	```
+	1. 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTA1NzUxMDc5NywyMDk3ODI4NjAyLDczMD
-k5ODExNl19
+eyJoaXN0b3J5IjpbLTExMzU4Njc5NjcsMjA5NzgyODYwMiw3Mz
+A5OTgxMTZdfQ==
 -->
