JPA/10.OQL.md updated from https://stackedit.io/

--- a/JPA/10.OQL.md
+++ b/JPA/10.OQL.md
@@ -151,8 +151,11 @@
 		}
 	});
 	```
-	1. 
+	1. EntityManager에서 하이버네이트 session을 구함
+	2. Session의 doWork() 호출
+- **JDBC나 마이바티스를 JPA와 함께 사용하면 영속성 컨텍스트를 적절한 시점에 강제로 플러시 해야 함**
+	- 이유 : JDBC나 SQL 매퍼 모두 JPA를 우회
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTExMzU4Njc5NjcsMjA5NzgyODYwMiw3Mz
-A5OTgxMTZdfQ==
+eyJoaXN0b3J5IjpbLTExNjMzMzQ4OSwyMDk3ODI4NjAyLDczMD
+k5ODExNl19
 -->
