JPA/10.OQL.md updated from https://stackedit.io/

--- a/JPA/10.OQL.md
+++ b/JPA/10.OQL.md
@@ -154,8 +154,12 @@
 	1. EntityManager에서 하이버네이트 session을 구함
 	2. Session의 doWork() 호출
 - **JDBC나 마이바티스를 JPA와 함께 사용하면 영속성 컨텍스트를 적절한 시점에 강제로 플러시 해야 함**
-	- 이유 : JDBC나 SQL 매퍼 모두 JPA를 우회
+	- 이유
+		- JDBC나 SQL 매퍼 모두 JPA를 우회해서 DB에 접근함
+		- JPA를 우회하는 SQL에 대해서는 **JPA가 전혀 인식하지 못함**
+		- 잘못하다간 *데이터 무결성을 해칠 수 있음*
+		- 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTExNjMzMzQ4OSwyMDk3ODI4NjAyLDczMD
-k5ODExNl19
+eyJoaXN0b3J5IjpbMzE3MzA3OTM4LDIwOTc4Mjg2MDIsNzMwOT
+k4MTE2XX0=
 -->
