JPA/10.OQL.md updated from https://stackedit.io/

--- a/JPA/10.OQL.md
+++ b/JPA/10.OQL.md
@@ -158,8 +158,8 @@
 		- JDBC나 SQL 매퍼 모두 JPA를 우회해서 DB에 접근함
 		- JPA를 우회하는 SQL에 대해서는 **JPA가 전혀 인식하지 못함**
 		- 잘못하다간 *데이터 무결성을 해칠 수 있음*
-		- 
+			- ex) 영속성 컨텍스트에 있는 10,000원 짜리 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMzE3MzA3OTM4LDIwOTc4Mjg2MDIsNzMwOT
-k4MTE2XX0=
+eyJoaXN0b3J5IjpbLTgyNzYxNTQ5LDMxNzMwNzkzOCwyMDk3OD
+I4NjAyLDczMDk5ODExNl19
 -->
