JPA/10.OQL.md updated from https://stackedit.io/

--- a/JPA/10.OQL.md
+++ b/JPA/10.OQL.md
@@ -158,8 +158,11 @@
 		- JDBC나 SQL 매퍼 모두 JPA를 우회해서 DB에 접근함
 		- JPA를 우회하는 SQL에 대해서는 **JPA가 전혀 인식하지 못함**
 		- 잘못하다간 *데이터 무결성을 해칠 수 있음*
-			- ex) 영속성 컨텍스트에 있는 10,000원 짜리 
+			- ex) 영속성 컨텍스트에 있는 10,000원 짜리 상품 A의 가격을 9,000원으로 변경하고 아직 플러시를 하지 않았는데 JPA를 우회해서 DB에 직접 상품 A를 조회하는 경우 10,000원으로 조회됨
+	- 해결방법
+		- JPA를 우회해서 SQL을 실행하기 직접에 영속성 컨텍스트를 수동으로 플러시
+- 스프링 프레임워크 사용 시 JPA와 마이바티
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTgyNzYxNTQ5LDMxNzMwNzkzOCwyMDk3OD
-I4NjAyLDczMDk5ODExNl19
+eyJoaXN0b3J5IjpbMTUxNzAzNTM0MSwzMTczMDc5MzgsMjA5Nz
+gyODYwMiw3MzA5OTgxMTZdfQ==
 -->
