--- a/JPA/10.OQL.md
+++ b/JPA/10.OQL.md
@@ -161,8 +161,10 @@
 			- ex) 영속성 컨텍스트에 있는 10,000원 짜리 상품 A의 가격을 9,000원으로 변경하고 아직 플러시를 하지 않았는데 JPA를 우회해서 DB에 직접 상품 A를 조회하는 경우 10,000원으로 조회됨
 	- 해결방법
 		- JPA를 우회해서 SQL을 실행하기 직접에 영속성 컨텍스트를 수동으로 플러시
-- 스프링 프레임워크 사용 시 JPA와 마이바티
+- 스프링 프레임워크 사용 시
+	- JPA와 마이바티스를 손쉽게 통합 가능
+	- AOP를 적절히 활용해서 JPA를 우회하여 DB에 접근하는 메소드를 호출할 때마다 영속성 컨텍스트를 플러시하여 해결 가능
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTUxNzAzNTM0MSwzMTczMDc5MzgsMjA5Nz
-gyODYwMiw3MzA5OTgxMTZdfQ==
+eyJoaXN0b3J5IjpbNTE1NzgzMTQ2LDMxNzMwNzkzOCwyMDk3OD
+I4NjAyLDczMDk5ODExNl19
 -->
