--- a/JPA/10.OQL.md
+++ b/JPA/10.OQL.md
@@ -163,8 +163,8 @@
 		- JPA를 우회해서 SQL을 실행하기 직접에 영속성 컨텍스트를 수동으로 플러시
 - 스프링 프레임워크 사용 시
 	- JPA와 마이바티스를 손쉽게 통합 가능
-	- AOP를 적절히 활용해서 JPA를 우회하여 DB에 접근하는 메소드를 호출할 때마다 영속성 컨텍스트를 플러시하여 해결 가능
+	- *AOP*를 적절히 활용해서 JPA를 우회하여 DB에 접근하는 메소드를 호출할 때마다 영속성 컨텍스트를 플러시하여 해결 가능
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbNTE1NzgzMTQ2LDMxNzMwNzkzOCwyMDk3OD
-I4NjAyLDczMDk5ODExNl19
+eyJoaXN0b3J5IjpbLTU1MDU3NDExOCwzMTczMDc5MzgsMjA5Nz
+gyODYwMiw3MzA5OTgxMTZdfQ==
 -->
