--- a/JPA/9.valueType.md
+++ b/JPA/9.valueType.md
@@ -135,7 +135,7 @@
 ### 9.3.1 값 타입 공유 참조
 - Member1 과 Member2 가 같은 Address 임베디드 타입 인스턴스를 참조하면 위험함
 - ex)
-	``` 
+	```java 
 	member1.setHomeAddress(new Address("oldCity"));
 	Address address = member1.getHomeAddress();
 	
@@ -147,7 +147,7 @@
 ### 9.3.2 값 타입 복사
 - 값 타입 공유 대신 복사 사용 권장
 - ex)
-	``` 
+	```java 
 	member1.setHomeAddress(new Address("oldCity"));
 	Address address = member1.getHomeAddress();
 	
@@ -156,7 +156,7 @@
 	member2.setHomeAddress(newAddr);
 	``` 
 	- **Address는 객체이므로, 아래와 같이 할당하면 복사가 아니라 참조값을 전달하게 되는 것을 주의해야 함**
-	``` 
+	```java 
 	Address a = new Address("Old");
 	Address b = a;
 	``` 
@@ -168,7 +168,7 @@
 - 따라서, **가능한한 값 타입은 불변 객체로 설계해야 한다**
 - 방법 : 생성자로만 값을 설정하고 수정자(setter)를 만들지 않음
 - 적용
-	``` 
+	```java 
 	Address addr = member1.getHomeAddress();
 	Address newAddr = new Address(addr.getCity());
 	member2.setHomeAddress(newAddr);
@@ -183,7 +183,7 @@
 		- 그렇지 않으면 해시를 사용하는 컬렉션 (HashSet, HashMap) 이 정상동작하지 않음
 ## 9.5 값 타입 컬렉션
 - 값 타입을 하나 이상 저장하려면 컬렉션에 보관하고 **@ElementCollection, @CollectionTable** 어노테이션을 사용하면 됨
-	``` 
+	```java 
     @Entity
     public class Member {
 	    @Id @GeneratedValue
@@ -221,7 +221,7 @@
 		- ex) Member 엔티티의 addressHistory는 Member_addressHistory 테이블과 매핑함
 ### 9.5.1 값 타입 컬렉션
 - ex)
-	``` 
+	```java 
 	Member member = new Member();
 
 	// 임베디드 값 타입
@@ -250,7 +250,7 @@
 	-	**값 타입 컬렉션은 영속성 전이 (cascade) + 고아 객체 제거 (orphan remove) 기능을 필수로 가짐**
 - 값 타입 컬렉션 조회 시에는 **LAZY** 가 *기본 전략*
 - 조회 예제
-	``` 
+	```java 
 	// SQL : SELECT ID, CITY, STREET, ZIPCODE FROM MEMBER WHERE ID = 1
 	Member member = em.find(Member.class, 1L); // 1. member
 
@@ -279,7 +279,7 @@
 		- member.favoriteFoods : LAZY로 설정해서 실제 컬렉션을 사용할 때 1번 호출
 		- member.addressHistory : LAZY 로 설정해서 실제 컬렉션을 사용할 때 SELECT SQL을 1번 호출
 - 값을 수정하는 예제
-	``` 
+	```java 
 	// SQL : SELECT ID, CITY, STREET, ZIPCODE FROM MEMBER WHERE ID = 1
 	Member member = em.find(Member.class, 1L);
 
@@ -332,7 +332,7 @@
 - 엔티티를 값 타입으로 만들면 안됨
 - 판단기준 : **식별자가 필요하고, 지속해서 값을 추적하고, 구분하고, 변경해야 한다면 엔티티**
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTE2MzMwMDg3MTIsLTcxNzY4ODUyNSwtMj
-A1MjA1MjU2MCwtMTIxMzA4ODMwMywtMjA2ODU0MjI4OSw4Njgx
-NTM2NjksLTk4NzUxNzc2OSw3MzA5OTgxMTZdfQ==
+eyJoaXN0b3J5IjpbLTgyMDc0ODg3MiwtNzE3Njg4NTI1LC0yMD
+UyMDUyNTYwLC0xMjEzMDg4MzAzLC0yMDY4NTQyMjg5LDg2ODE1
+MzY2OSwtOTg3NTE3NzY5LDczMDk5ODExNl19
 -->
