JPA/10.OQL.md updated from https://stackedit.io/

--- a/JPA/10.OQL.md
+++ b/JPA/10.OQL.md
@@ -37,7 +37,7 @@
 	- SQL보다 간결함
 		- 엔티티 직접 조회, 묵시적 조인, 다형성 지원
 - ex)
-	```
+	```java
 	@Entity(name="Member")
 	public class Member {
 		@Column(name = "name")
@@ -45,7 +45,7 @@
 	}
 	```
 - JPQL 사용
-	```
+	```java
 	// 쿼리 생성
 	String jpql = "select m from Member as m where m.username = 'kim'";
 	List<Member> resultList = em.createQuery(jpql, Member.class).getResultList();
@@ -58,17 +58,17 @@
 		- JPA는 JPQL을 SQL로 변환해서 DB를 조회
 		- 조회 결과로 Member.class 엔티티 생성해서 반환
 	- 실제 실행된 SQL
-	```
-	select
-		member.id as id,
-		member.age as age,
-		member.team_id as team,
-		membebr.name as name
-	from
-		Member member
-	where
-		member.name='kim'
-	```
+		```sql
+		select
+			member.id as id,
+			member.age as age,
+			member.team_id as team,
+			membebr.name as name
+		from
+			Member member
+		where
+			member.name='kim'
+		```
 		- 실제로는 좀 더 복잡해서 위는 단순화시킨 버전임
 ### 10.1.2 Criteria 쿼리 소개
 - 정의 : **JPQL을 생성하는 빌더 클래스**
@@ -82,7 +82,7 @@
 	- 런타임 시점까지 오타를 잡지 못함
 	- ex) select m from Membeeee m 처럼 오타가 있어도 컴파일 시에는 잡지 못함
 - ex)
-	```
+	```java
 	// Criteria 사용 준비
 	CriteriaBuilder cb = em.getCriteriaBuilder();
 	CriteriaQuery<Member> query = db.createQuery(Member.class);
@@ -112,7 +112,7 @@
 - 참고
 	- QueryDSL 은 JPA 표준은 아니고 오픈소스 프로젝트
 - ex)
-	```
+	```java
 	// 준비
 	JPAQuery query = new JPAQuery(em);
 	QMember member = QMember.member;
@@ -134,7 +134,7 @@
 - 단점
 	- 특정 DB에 의존하는 SQL을 작성해야 한다는 것
 		- = DB를 변경하면 네이티브 SQL도 수정해야 한다
-	```
+	```java
 	String sql = "SELECT ID, AGE, TEAM_ID, NAME FROM MEMBER WHERE NAME = 'kim'";
 	List<Member> resultList = em.createNativeQuery(sql, Member.class).getResultList();
 	```
@@ -142,7 +142,7 @@
 - JPA 구현체가 제공하는 방법을 사용해서 직접 DB 접근
 	- JPA는 JDBC 커넥션을 획득하는 API를 제공하지 않으므로
 - ex) 하이버네이트에서 직접 JDBX Connection을 획득하는 방법
-	```
+	```java
 	Session session = entityManager.unwrap(Session.class);
 	session.doWork(new Work() {
 		@Override
@@ -165,6 +165,6 @@
 	- JPA와 마이바티스를 손쉽게 통합 가능
 	- *AOP*를 적절히 활용해서 JPA를 우회하여 DB에 접근하는 메소드를 호출할 때마다 영속성 컨텍스트를 플러시하여 해결 가능
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTIwNTY1MjQzMjYsMzE3MzA3OTM4LDIwOT
-c4Mjg2MDIsNzMwOTk4MTE2XX0=
+eyJoaXN0b3J5IjpbLTE3Mzc1MTI0NTAsLTIwNTY1MjQzMjYsMz
+E3MzA3OTM4LDIwOTc4Mjg2MDIsNzMwOTk4MTE2XX0=
 -->
