--- a/JPA/9.valueType.md
+++ b/JPA/9.valueType.md
@@ -29,7 +29,7 @@
 ## 9.2 임베디드 타입 (복합 값 타입)
 - 새로운 값 타입을 정의해서 사용하는 것
 - ex)
-	``` 
+	```java 
     @Entity
     public class Member {
 	    @Id @GeneratedValue
@@ -40,7 +40,7 @@
 	    @Embedded Address homeAddress; // 집 주소
 	}
 	```
-	``` 
+	```java 
 	@Embeddable
 	public class Period {
 		@Temporal(TemporalType.DATE) java.util.Date startDate;
@@ -51,7 +51,7 @@
 		}
 	}
 	``` 
-	``` 
+	```java 
 	@Embeddable
 	public class Address {
 		@Column(name="city) // 매핑할 컬럼 정의 가능
@@ -77,7 +77,7 @@
 ### 9.2.2 임베디드 타입과 연과관계
 - 임베디드 타입은 값 타입을 포함하거나 엔티티 참조 가능
 ![임베디드 타입과 연관관계](https://github.com/tatarobo/JPA/blob/master/JPA/image/pic2.png)
-    ``` 
+    ```java 
 	@Entity
 	public class Member {
 	    @Embedded Address address;
@@ -112,7 +112,7 @@
 	``` 
 ### 9.2.3 @AttributeOverride: 속정 재정의
 - 임베디드 타입에 정의한 매핑정보 재정의 시 사용
-	``` 
+	```java 
 	@Entity
 	public class Member {
 	    @Embedded Address homeAddress;
@@ -332,7 +332,7 @@
 - 엔티티를 값 타입으로 만들면 안됨
 - 판단기준 : **식별자가 필요하고, 지속해서 값을 추적하고, 구분하고, 변경해야 한다면 엔티티**
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTgyMDc0ODg3MiwtNzE3Njg4NTI1LC0yMD
+eyJoaXN0b3J5IjpbMTcyMjYzMTc3MCwtNzE3Njg4NTI1LC0yMD
 UyMDUyNTYwLC0xMjEzMDg4MzAzLC0yMDY4NTQyMjg5LDg2ODE1
 MzY2OSwtOTg3NTE3NzY5LDczMDk5ODExNl19
 -->
