--- a/JPA/10.OQL.md
+++ b/JPA/10.OQL.md
@@ -27,7 +27,7 @@
 		- 비표준 오픈소스 프레임워크
 	- JDBC 직접 사용, MyBatis 같은 SQL 매퍼 프레임워크
 ### 10.1.1 JPQL 소개
-- 정의 : **엔티티 객체를 조회하는 객체지향 쿼리**
+- 정의 : `엔티티 객체를 조회하는 객체지향 쿼리`
 - 특징
 	- SQL을 추상화해서 특정 DB에 의존하지 않음
 		- DB dialect (방언) 만 변경하면 JPQL을 수정하지 않아도 DB 변경 가능
@@ -71,7 +71,7 @@
 		```
 		- 실제로는 좀 더 복잡해서 위는 단순화시킨 버전임
 ### 10.1.2 Criteria 쿼리 소개
-- 정의 : **JPQL을 생성하는 빌더 클래스**
+- 정의 : `JPQL을 생성하는 빌더 클래스`
 - 장점
 	- 프로그래밍 코드로 JPQL을 작성할 수 있다는 것 (**컴파일 시에 오류 발견 가능**)
 		- ex) query.select(m).where(...)
@@ -104,7 +104,7 @@
 	- 복잡하고 장황함 = 사용하기 불편함
 	- Criteria로 작성한 코드는 한 눈에 들어오지 않음
 ### 10.1.3 QueryDSL 소개
-- 정의 : JPQL 빌더
+- 정의 : `JPQL 빌더`
 - 장점
 	- 코드 기반
 	- 단순하고 사용하기 쉬움
@@ -165,6 +165,6 @@
 	- JPA와 마이바티스를 손쉽게 통합 가능
 	- *AOP*를 적절히 활용해서 JPA를 우회하여 DB에 접근하는 메소드를 호출할 때마다 영속성 컨텍스트를 플러시하여 해결 가능
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTE3Mzc1MTI0NTAsLTIwNTY1MjQzMjYsMz
-E3MzA3OTM4LDIwOTc4Mjg2MDIsNzMwOTk4MTE2XX0=
+eyJoaXN0b3J5IjpbNTIzMzExMjQ4LC0yMDU2NTI0MzI2LDMxNz
+MwNzkzOCwyMDk3ODI4NjAyLDczMDk5ODExNl19
 -->
