JPA/10.OQL.md updated from https://stackedit.io/

--- a/JPA/10.OQL.md
+++ b/JPA/10.OQL.md
@@ -7,7 +7,7 @@
 - QueryDSL
 - 네이티브 SQL
 - 객체지향 쿼리 심화
-## 객체지향 쿼리 소개
+## 10.1 객체지향 쿼리 소개
 - 객체 조회 방법
 	- 식별자로 조회 (EntityManager.find())
 	- 객체 그래프 탐색 (ex - a.getB().getC())
@@ -165,6 +165,7 @@
 	- JPA와 마이바티스를 손쉽게 통합 가능
 	- *AOP*를 적절히 활용해서 JPA를 우회하여 DB에 접근하는 메소드를 호출할 때마다 영속성 컨텍스트를 플러시하여 해결 가능
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbNTIzMzExMjQ4LC0yMDU2NTI0MzI2LDMxNz
-MwNzkzOCwyMDk3ODI4NjAyLDczMDk5ODExNl19
+eyJoaXN0b3J5IjpbMTUyMzAxMzAxOCw1MjMzMTEyNDgsLTIwNT
+Y1MjQzMjYsMzE3MzA3OTM4LDIwOTc4Mjg2MDIsNzMwOTk4MTE2
+XX0=
 -->
