JPA/10.OQL.md updated from https://stackedit.io/

--- a/JPA/10.OQL.md
+++ b/JPA/10.OQL.md
@@ -164,8 +164,9 @@
 - 스프링 프레임워크 사용 시
 	- JPA와 마이바티스를 손쉽게 통합 가능
 	- *AOP*를 적절히 활용해서 JPA를 우회하여 DB에 접근하는 메소드를 호출할 때마다 영속성 컨텍스트를 플러시하여 해결 가능
+## 10.2 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTUyMzAxMzAxOCw1MjMzMTEyNDgsLTIwNT
-Y1MjQzMjYsMzE3MzA3OTM4LDIwOTc4Mjg2MDIsNzMwOTk4MTE2
-XX0=
+eyJoaXN0b3J5IjpbLTE3NTEwNzkyMjEsMTUyMzAxMzAxOCw1Mj
+MzMTEyNDgsLTIwNTY1MjQzMjYsMzE3MzA3OTM4LDIwOTc4Mjg2
+MDIsNzMwOTk4MTE2XX0=
 -->
