JPA/10.OQL.md updated from https://stackedit.io/

--- a/JPA/10.OQL.md
+++ b/JPA/10.OQL.md
@@ -164,9 +164,14 @@
 - 스프링 프레임워크 사용 시
 	- JPA와 마이바티스를 손쉽게 통합 가능
 	- *AOP*를 적절히 활용해서 JPA를 우회하여 DB에 접근하는 메소드를 호출할 때마다 영속성 컨텍스트를 플러시하여 해결 가능
-## 10.2 
+## 10.2 JPQL
+- 특징
+	- 객체지향 쿼리 언어 = 테이블이 아니라 엔티티 대상으로 쿼리
+	- SQL 추상화로 특정 DB SQL 에 의존적이지 않음
+	- SQL로 변환됨
+- 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTE3NTEwNzkyMjEsMTUyMzAxMzAxOCw1Mj
-MzMTEyNDgsLTIwNTY1MjQzMjYsMzE3MzA3OTM4LDIwOTc4Mjg2
-MDIsNzMwOTk4MTE2XX0=
+eyJoaXN0b3J5IjpbMjUyMTQ4MzQ5LDE1MjMwMTMwMTgsNTIzMz
+ExMjQ4LC0yMDU2NTI0MzI2LDMxNzMwNzkzOCwyMDk3ODI4NjAy
+LDczMDk5ODExNl19
 -->
