--- a/JPA/10.OQL.md
+++ b/JPA/10.OQL.md
@@ -169,9 +169,10 @@
 	- 객체지향 쿼리 언어 = 테이블이 아니라 엔티티 대상으로 쿼리
 	- SQL 추상화로 특정 DB SQL 에 의존적이지 않음
 	- SQL로 변환됨
-- 
+- 예제로 사용할 도메인 모델
+
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMjUyMTQ4MzQ5LDE1MjMwMTMwMTgsNTIzMz
-ExMjQ4LC0yMDU2NTI0MzI2LDMxNzMwNzkzOCwyMDk3ODI4NjAy
-LDczMDk5ODExNl19
+eyJoaXN0b3J5IjpbMTk1OTIxNDE5MCwxNTIzMDEzMDE4LDUyMz
+MxMTI0OCwtMjA1NjUyNDMyNiwzMTczMDc5MzgsMjA5NzgyODYw
+Miw3MzA5OTgxMTZdfQ==
 -->
