JPA/10.OQL.md updated from https://stackedit.io/

--- a/JPA/10.OQL.md
+++ b/JPA/10.OQL.md
@@ -170,9 +170,12 @@
 	- SQL 추상화로 특정 DB SQL 에 의존적이지 않음
 	- SQL로 변환됨
 - 예제로 사용할 도메인 모델
-
+![샘플 모델 UML](https://github.com/tatarobo/JPA/blob/master/JPA/image/pic3.png)
+	- 회원이 상품을 주문하는 다대다 관계
+	- ERD를 보면 Address 는 Order 테이블에 포함되어 있음
+### 10.2.1 기본 문접
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTk1OTIxNDE5MCwxNTIzMDEzMDE4LDUyMz
-MxMTI0OCwtMjA1NjUyNDMyNiwzMTczMDc5MzgsMjA5NzgyODYw
-Miw3MzA5OTgxMTZdfQ==
+eyJoaXN0b3J5IjpbMTkzNTAwODM0OCwxOTU5MjE0MTkwLDE1Mj
+MwMTMwMTgsNTIzMzExMjQ4LC0yMDU2NTI0MzI2LDMxNzMwNzkz
+OCwyMDk3ODI4NjAyLDczMDk5ODExNl19
 -->
