--- a/JPA/10.OQL.md
+++ b/JPA/10.OQL.md
@@ -173,9 +173,12 @@
 ![샘플 모델 UML](https://github.com/tatarobo/JPA/blob/master/JPA/image/pic3.png)
 	- 회원이 상품을 주문하는 다대다 관계
 	- ERD를 보면 Address 는 Order 테이블에 포함되어 있음
-### 10.2.1 기본 문접
+### 10.2.1 기본 문법과 쿼리 API
+- SELECT, UPDATE, DELETE 문을 사용할 수 있음 (insert 는 em.persist() 사용)
+	- UPDATE, DELETE 문은 벌크 연산이라 함
+- S
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTkzNTAwODM0OCwxOTU5MjE0MTkwLDE1Mj
+eyJoaXN0b3J5IjpbMTU0MTY1Mzc5NSwxOTU5MjE0MTkwLDE1Mj
 MwMTMwMTgsNTIzMzExMjQ4LC0yMDU2NTI0MzI2LDMxNzMwNzkz
 OCwyMDk3ODI4NjAyLDczMDk5ODExNl19
 -->
