JPA/10.OQL.md updated from https://stackedit.io/

--- a/JPA/10.OQL.md
+++ b/JPA/10.OQL.md
@@ -176,9 +176,16 @@
 ### 10.2.1 기본 문법과 쿼리 API
 - SELECT, UPDATE, DELETE 문을 사용할 수 있음 (insert 는 em.persist() 사용)
 	- UPDATE, DELETE 문은 벌크 연산이라 함
-- S
+- SELECT 문
+	- ex)
+	```sql
+	SELECT m FROM Member AS m where m.username = 'Hello'
+	```
+	- 특징
+		- 대소문자 구분
+			- 엔티티와 속서
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTU0MTY1Mzc5NSwxOTU5MjE0MTkwLDE1Mj
+eyJoaXN0b3J5IjpbMTMxNTE1NjczOCwxOTU5MjE0MTkwLDE1Mj
 MwMTMwMTgsNTIzMzExMjQ4LC0yMDU2NTI0MzI2LDMxNzMwNzkz
 OCwyMDk3ODI4NjAyLDczMDk5ODExNl19
 -->
