JPA/10.OQL.md updated from https://stackedit.io/

--- a/JPA/10.OQL.md
+++ b/JPA/10.OQL.md
@@ -183,9 +183,15 @@
 	```
 	- 특징
 		- 대소문자 구분
-			- 엔티티와 속서
+			- 엔티티와 속성은 대소문자를 구분함
+				- ex) Member (O), member (X)
+				- ex) username(O), UserName(X)
+			- SELECT, FROM, WHERE, AS 같은 키워드는 대소문자 구분하지 않음
+		- 엔티티 이름
+			- 테이블 명이 아니라 엔티티 명을 사용
+			- 별칭을 필수
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTMxNTE1NjczOCwxOTU5MjE0MTkwLDE1Mj
+eyJoaXN0b3J5IjpbMTc0OTQ0NjkyNywxOTU5MjE0MTkwLDE1Mj
 MwMTMwMTgsNTIzMzExMjQ4LC0yMDU2NTI0MzI2LDMxNzMwNzkz
 OCwyMDk3ODI4NjAyLDczMDk5ODExNl19
 -->
