JPA/10.OQL.md updated from https://stackedit.io/

--- a/JPA/10.OQL.md
+++ b/JPA/10.OQL.md
@@ -189,9 +189,11 @@
 			- SELECT, FROM, WHERE, AS 같은 키워드는 대소문자 구분하지 않음
 		- 엔티티 이름
 			- 테이블 명이 아니라 엔티티 명을 사용
-			- 별칭을 필수
+				- @Entity(name = "XXX") 처럼 엔티티명
+			- 엔티티 명을 지정하지 않으면 클래스 명을 기본값으로 사용함
+		- 별칭은 필수
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTc0OTQ0NjkyNywxOTU5MjE0MTkwLDE1Mj
+eyJoaXN0b3J5IjpbMTU4NjgxMzg3NiwxOTU5MjE0MTkwLDE1Mj
 MwMTMwMTgsNTIzMzExMjQ4LC0yMDU2NTI0MzI2LDMxNzMwNzkz
 OCwyMDk3ODI4NjAyLDczMDk5ODExNl19
 -->
