JPA/10.OQL.md updated from https://stackedit.io/

--- a/JPA/10.OQL.md
+++ b/JPA/10.OQL.md
@@ -182,18 +182,23 @@
 	SELECT m FROM Member AS m where m.username = 'Hello'
 	```
 	- 특징
-		- 대소문자 구분
+		- **대소문자 구분**
 			- 엔티티와 속성은 대소문자를 구분함
 				- ex) Member (O), member (X)
 				- ex) username(O), UserName(X)
 			- SELECT, FROM, WHERE, AS 같은 키워드는 대소문자 구분하지 않음
-		- 엔티티 이름
+		- **엔티티 이름**
 			- 테이블 명이 아니라 엔티티 명을 사용
-				- @Entity(name = "XXX") 처럼 엔티티명
-			- 엔티티 명을 지정하지 않으면 클래스 명을 기본값으로 사용함
-		- 별칭은 필수
+				- @Entity(name = "XXX") 처럼 엔티티명은 지정 가능
+			- 엔티티 명을 지정하지 않으면 클래스 명을 기본값으로 사용함 (권장)
+		- **별칭은 필수**
+			- Member AS m 에서 Member 에 m 이라는 별칭을 주는 식으로 사용해야 함
+			- 그렇지 않으면 문법 오류 발생
+			- AS는 생략 가능
+	- 참고
+		- 하이버네이트는 HQL(Hibernate Query
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTU4NjgxMzg3NiwxOTU5MjE0MTkwLDE1Mj
-MwMTMwMTgsNTIzMzExMjQ4LC0yMDU2NTI0MzI2LDMxNzMwNzkz
-OCwyMDk3ODI4NjAyLDczMDk5ODExNl19
+eyJoaXN0b3J5IjpbLTIwMzA2MTE5ODksMTk1OTIxNDE5MCwxNT
+IzMDEzMDE4LDUyMzMxMTI0OCwtMjA1NjUyNDMyNiwzMTczMDc5
+MzgsMjA5NzgyODYwMiw3MzA5OTgxMTZdfQ==
 -->
