JPA/10.OQL.md updated from https://stackedit.io/

--- a/JPA/10.OQL.md
+++ b/JPA/10.OQL.md
@@ -196,9 +196,18 @@
 			- 그렇지 않으면 문법 오류 발생
 			- AS는 생략 가능
 	- 참고
-		- 하이버네이트는 HQL(Hibernate Query
+		- 하이버네이트는 HQL(Hibernate Query Language) 도 지원함
+		- JPQL 대신 HQL 사용 가능
+		- HQL은 별칭 없이 사용 가능
+		- JPA 표준 명세는 별칭을 식별 변수 (identification variable) 이라는 용어로 정의
+- TypeQuery, Query
+	- JPQL을 실행하면 쿼리 객체를 만듦
+	- 쿼리 객체
+		- TypeQuery
+		- 
+		- Query
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTIwMzA2MTE5ODksMTk1OTIxNDE5MCwxNT
-IzMDEzMDE4LDUyMzMxMTI0OCwtMjA1NjUyNDMyNiwzMTczMDc5
-MzgsMjA5NzgyODYwMiw3MzA5OTgxMTZdfQ==
+eyJoaXN0b3J5IjpbOTY2Mzk4MDA2LDE5NTkyMTQxOTAsMTUyMz
+AxMzAxOCw1MjMzMTEyNDgsLTIwNTY1MjQzMjYsMzE3MzA3OTM4
+LDIwOTc4Mjg2MDIsNzMwOTk4MTE2XX0=
 -->
