--- a/JPA/10.OQL.md
+++ b/JPA/10.OQL.md
@@ -204,10 +204,18 @@
 	- JPQL을 실행하면 쿼리 객체를 만듦
 	- 쿼리 객체
 		- TypeQuery
-		- 
+			- 타입을 명확하게 지정 가능한 경우 사용
 		- Query
+			- 타입을 명확하게 지정할 수 없을 경우 사용
+	- ex)
+	```java
+	TypedQuery<Member> query = em.createQuery("SELECT m FROM Member m", Member.class);
+
+	List<Member> resultList = query.getResultList();
+	for (Member m : 
+	```
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbOTY2Mzk4MDA2LDE5NTkyMTQxOTAsMTUyMz
-AxMzAxOCw1MjMzMTEyNDgsLTIwNTY1MjQzMjYsMzE3MzA3OTM4
-LDIwOTc4Mjg2MDIsNzMwOTk4MTE2XX0=
+eyJoaXN0b3J5IjpbLTIwMTA4MTMzMjcsMTk1OTIxNDE5MCwxNT
+IzMDEzMDE4LDUyMzMxMTI0OCwtMjA1NjUyNDMyNiwzMTczMDc5
+MzgsMjA5NzgyODYwMiw3MzA5OTgxMTZdfQ==
 -->
