JPA/10.OQL.md updated from https://stackedit.io/

--- a/JPA/10.OQL.md
+++ b/JPA/10.OQL.md
@@ -212,10 +212,24 @@
 	TypedQuery<Member> query = em.createQuery("SELECT m FROM Member m", Member.class);
 
 	List<Member> resultList = query.getResultList();
-	for (Member m : 
+	for (Member m : resultList) {
+		System.out.println("member = " + m);
+	}
+	```
+	- em.createQuery("SELECT m FROM Member m", **Member.class**)
+		- 2번째 파라미터를 위와 같이 지정하면 TypedQuery를 반환하고, 그렇지 않으면 Query 를 반환함
+	- ex)
+	```java
+	Query<Member> query = em.createQuery("SELECT m FROM Member m");
+	List<
+
+	List<Member> resultList = query.getResultList();
+	for (Member m : resultList) {
+		System.out.println("member = " + m);
+	}
 	```
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTIwMTA4MTMzMjcsMTk1OTIxNDE5MCwxNT
-IzMDEzMDE4LDUyMzMxMTI0OCwtMjA1NjUyNDMyNiwzMTczMDc5
-MzgsMjA5NzgyODYwMiw3MzA5OTgxMTZdfQ==
+eyJoaXN0b3J5IjpbMjg5NTQ3MzA4LDE5NTkyMTQxOTAsMTUyMz
+AxMzAxOCw1MjMzMTEyNDgsLTIwNTY1MjQzMjYsMzE3MzA3OTM4
+LDIwOTc4Mjg2MDIsNzMwOTk4MTE2XX0=
 -->
