--- a/JPA/10.OQL.md
+++ b/JPA/10.OQL.md
@@ -220,16 +220,17 @@
 		- 2번째 파라미터를 위와 같이 지정하면 TypedQuery를 반환하고, 그렇지 않으면 Query 를 반환함
 	- ex)
 	```java
-	Query<Member> query = em.createQuery("SELECT m FROM Member m");
-	List<
+	Query query = em.createQuery("SELECT m.username, m.age FROM Member m");
+	List resultList = query.getResultList();
 
-	List<Member> resultList = query.getResultList();
-	for (Member m : resultList) {
-		System.out.println("member = " + m);
+	for (Object m : resultList) {
+		Object[] result = (Object[]) o; // 결과가 둘 이상이면
+		System.out.println("username = " + m);
+		System.out.println("age = " + m);
 	}
 	```
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMjg5NTQ3MzA4LDE5NTkyMTQxOTAsMTUyMz
-AxMzAxOCw1MjMzMTEyNDgsLTIwNTY1MjQzMjYsMzE3MzA3OTM4
-LDIwOTc4Mjg2MDIsNzMwOTk4MTE2XX0=
+eyJoaXN0b3J5IjpbMTI1NDQwMjk5MSwxOTU5MjE0MTkwLDE1Mj
+MwMTMwMTgsNTIzMzExMjQ4LC0yMDU2NTI0MzI2LDMxNzMwNzkz
+OCwyMDk3ODI4NjAyLDczMDk5ODExNl19
 -->
