--- a/JPA/10.OQL.md
+++ b/JPA/10.OQL.md
@@ -219,18 +219,20 @@
 	- em.createQuery("SELECT m FROM Member m", **Member.class**)
 		- 2번째 파라미터를 위와 같이 지정하면 TypedQuery를 반환하고, 그렇지 않으면 Query 를 반환함
 	- ex)
-	```java
-	Query query = em.createQuery("SELECT m.username, m.age FROM Member m");
-	List resultList = query.getResultList();
+		```java
+		Query query = em.createQuery("SELECT m.username, m.age FROM Member m");
+		List resultList = query.getResultList();
 
-	for (Object m : resultList) {
-		Object[] result = (Object[]) o; // 결과가 둘 이상이면
-		System.out.println("username = " + m);
-		System.out.println("age = " + m);
-	}
-	```
+		for (Object m : resultList) {
+			Object[] result = (Object[]) o; // 결과가 둘 이상이면 Object[] 반환
+			System.out.println("username = " + result[0]);
+			System.out.println("age = " + result[1]);
+		}
+		```
+		- 조회 대상이 String 타입인 이름과 Integer 타입인 나이이므로 조회 대상 타입이 **명확하지 않음**
+		- 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTI1NDQwMjk5MSwxOTU5MjE0MTkwLDE1Mj
-MwMTMwMTgsNTIzMzExMjQ4LC0yMDU2NTI0MzI2LDMxNzMwNzkz
-OCwyMDk3ODI4NjAyLDczMDk5ODExNl19
+eyJoaXN0b3J5IjpbLTEwOTA3OTQ4NTUsMTk1OTIxNDE5MCwxNT
+IzMDEzMDE4LDUyMzMxMTI0OCwtMjA1NjUyNDMyNiwzMTczMDc5
+MzgsMjA5NzgyODYwMiw3MzA5OTgxMTZdfQ==
 -->
