JPA/10.OQL.md updated from https://stackedit.io/

--- a/JPA/10.OQL.md
+++ b/JPA/10.OQL.md
@@ -230,9 +230,16 @@
 		}
 		```
 		- 조회 대상이 String 타입인 이름과 Integer 타입인 나이이므로 조회 대상 타입이 **명확하지 않음**
-		- 
+		- **SELECT 에서 여러 엔티티나 컬럼을 선택할 때는 Query 사용해야 함**
+- 결과 조회
+	- 아래 메소드들을 호출하면 실제 쿼리를 실행
+		- query.getResultList()
+			- 결과를 예제로 반환
+			- 결과가 없으면 빈 컬렉션 반환
+		- query.getSingleResult()
+			- 결과가 정확히 하나니
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTEwOTA3OTQ4NTUsMTk1OTIxNDE5MCwxNT
-IzMDEzMDE4LDUyMzMxMTI0OCwtMjA1NjUyNDMyNiwzMTczMDc5
-MzgsMjA5NzgyODYwMiw3MzA5OTgxMTZdfQ==
+eyJoaXN0b3J5IjpbMTIxNDkxODc5MiwxOTU5MjE0MTkwLDE1Mj
+MwMTMwMTgsNTIzMzExMjQ4LC0yMDU2NTI0MzI2LDMxNzMwNzkz
+OCwyMDk3ODI4NjAyLDczMDk5ODExNl19
 -->
