JPA/10.OQL.md updated from https://stackedit.io/

--- a/JPA/10.OQL.md
+++ b/JPA/10.OQL.md
@@ -237,9 +237,13 @@
 			- 결과를 예제로 반환
 			- 결과가 없으면 빈 컬렉션 반환
 		- query.getSingleResult()
-			- 결과가 정확히 하나니
+			- **결과가 정확히 하나일 때 사용**
+			- *결과가 없으면 javax.persistence.NoResultException* 발생
+			- *결과가 1개보다 많으면 javax.persistence.NonUniqueResultException* 발생
+### 10.2.2 파라미터 바인딩
+
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTIxNDkxODc5MiwxOTU5MjE0MTkwLDE1Mj
-MwMTMwMTgsNTIzMzExMjQ4LC0yMDU2NTI0MzI2LDMxNzMwNzkz
-OCwyMDk3ODI4NjAyLDczMDk5ODExNl19
+eyJoaXN0b3J5IjpbLTE5NTI4MTI3NzQsMTk1OTIxNDE5MCwxNT
+IzMDEzMDE4LDUyMzMxMTI0OCwtMjA1NjUyNDMyNiwzMTczMDc5
+MzgsMjA5NzgyODYwMiw3MzA5OTgxMTZdfQ==
 -->
