JPA/10.OQL.md updated from https://stackedit.io/

--- a/JPA/10.OQL.md
+++ b/JPA/10.OQL.md
@@ -241,9 +241,19 @@
 			- *결과가 없으면 javax.persistence.NoResultException* 발생
 			- *결과가 1개보다 많으면 javax.persistence.NonUniqueResultException* 발생
 ### 10.2.2 파라미터 바인딩
+- 이름 기준 파라미터 바인딩 지원
+- 이름 기준 파라미터
+	- Named Parameters
+	- 파라미터를 이름으로 구분하는 방법
+	- 파라미터 앞에는 :를 붙임
+	- ex)
+	```java
+	String usernameParam = "User1";
 
+	TypedQuery<Me
+	```
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTE5NTI4MTI3NzQsMTk1OTIxNDE5MCwxNT
-IzMDEzMDE4LDUyMzMxMTI0OCwtMjA1NjUyNDMyNiwzMTczMDc5
-MzgsMjA5NzgyODYwMiw3MzA5OTgxMTZdfQ==
+eyJoaXN0b3J5IjpbMTAwMjc2NTYzNSwxOTU5MjE0MTkwLDE1Mj
+MwMTMwMTgsNTIzMzExMjQ4LC0yMDU2NTI0MzI2LDMxNzMwNzkz
+OCwyMDk3ODI4NjAyLDczMDk5ODExNl19
 -->
