JPA/10.OQL.md updated from https://stackedit.io/

--- a/JPA/10.OQL.md
+++ b/JPA/10.OQL.md
@@ -250,10 +250,15 @@
 	```java
 	String usernameParam = "User1";
 
-	TypedQuery<Me
+	TypedQuery<Member> query = em.createQuery("SELECT m FROM Member m where m.username = :username", Member.class);
+
+	query.setParameter("username", usernameParam);
+	List<Member> resultList = query.getResultList();
 	```
+	- : username 	
+		- setPaema
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTAwMjc2NTYzNSwxOTU5MjE0MTkwLDE1Mj
-MwMTMwMTgsNTIzMzExMjQ4LC0yMDU2NTI0MzI2LDMxNzMwNzkz
-OCwyMDk3ODI4NjAyLDczMDk5ODExNl19
+eyJoaXN0b3J5IjpbNTk1NzQ0MDk0LDE5NTkyMTQxOTAsMTUyMz
+AxMzAxOCw1MjMzMTEyNDgsLTIwNTY1MjQzMjYsMzE3MzA3OTM4
+LDIwOTc4Mjg2MDIsNzMwOTk4MTE2XX0=
 -->
