JPA/10.OQL.md updated from https://stackedit.io/

--- a/JPA/10.OQL.md
+++ b/JPA/10.OQL.md
@@ -256,9 +256,18 @@
 	List<Member> resultList = query.getResultList();
 	```
 	- : username 	
-		- setPaema
+		- setParameter()에서 username 이라는 이름으로 파라미터를 바인딩
+	- 메소드 체인 방식이어서 아래와 같이 연속해서 작성 가능
+	```java
+	String usernameParam = "User1";
+
+	TypedQuery<Member> query = 
+		em.createQuery("SELECT m FROM Member m where m.username = :username", Member.class)
+			.setParameter(1, usernameParam)
+			.getResultList();
+	```
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbNTk1NzQ0MDk0LDE5NTkyMTQxOTAsMTUyMz
+eyJoaXN0b3J5IjpbOTIzNDI4NDcxLDE5NTkyMTQxOTAsMTUyMz
 AxMzAxOCw1MjMzMTEyNDgsLTIwNTY1MjQzMjYsMzE3MzA3OTM4
 LDIwOTc4Mjg2MDIsNzMwOTk4MTE2XX0=
 -->
