--- a/JPA/10.OQL.md
+++ b/JPA/10.OQL.md
@@ -261,13 +261,27 @@
 	```java
 	String usernameParam = "User1";
 
-	TypedQuery<Member> query = 
+	List<Member> resultList = 
 		em.createQuery("SELECT m FROM Member m where m.username = :username", Member.class)
+			.setParameter("username", usernameParam)
+			.getResultList();
+	```
+- 위치 기준 파라미터
+	- ? 다음에 위치 값을 주면 됨
+	- ex)
+	```java
+	String usernameParam = "User1";
+
+	List<Member> resultList = 
+		em.createQuery("SELECT m FROM Member m where m.username = ?1", Member.class)
 			.setParameter(1, usernameParam)
 			.getResultList();
 	```
+	-	이름 기준 파라미터 바인딩 방식을 사용하는 것 이 더 명확
+-	참고
+	-	
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbOTIzNDI4NDcxLDE5NTkyMTQxOTAsMTUyMz
+eyJoaXN0b3J5IjpbNzA0NjA1NTU4LDE5NTkyMTQxOTAsMTUyMz
 AxMzAxOCw1MjMzMTEyNDgsLTIwNTY1MjQzMjYsMzE3MzA3OTM4
 LDIwOTc4Mjg2MDIsNzMwOTk4MTE2XX0=
 -->
