JPA/10.OQL.md updated from https://stackedit.io/

--- a/JPA/10.OQL.md
+++ b/JPA/10.OQL.md
@@ -279,9 +279,11 @@
 	```
 	-	이름 기준 파라미터 바인딩 방식을 사용하는 것 이 더 명확
 -	참고
-	-	
+	-	파라미터 바인딩 방식을 사용하지 않고 직접 문자를 더해 만들어 넣으면 악의적인 사용자에 의해 SQL 인젝션 공격을 당할 수 있음
+	-	파라미터 바인딩 방식을 사용하면 파라미터의 값이 달라도 같은 쿼리로 인식해서 JPA는 JPQL을 SQL로 파싱한 결과를 재사용 할 수 있음
+	-	DB에서도 같은 쿼리는 파싱한 결과 재사용 가능하므로 전체
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbNzA0NjA1NTU4LDE5NTkyMTQxOTAsMTUyMz
-AxMzAxOCw1MjMzMTEyNDgsLTIwNTY1MjQzMjYsMzE3MzA3OTM4
-LDIwOTc4Mjg2MDIsNzMwOTk4MTE2XX0=
+eyJoaXN0b3J5IjpbLTkzMTYxMjAwMCwxOTU5MjE0MTkwLDE1Mj
+MwMTMwMTgsNTIzMzExMjQ4LC0yMDU2NTI0MzI2LDMxNzMwNzkz
+OCwyMDk3ODI4NjAyLDczMDk5ODExNl19
 -->
