JPA/10.OQL.md updated from https://stackedit.io/

--- a/JPA/10.OQL.md
+++ b/JPA/10.OQL.md
@@ -281,9 +281,12 @@
 -	참고
 	-	파라미터 바인딩 방식을 사용하지 않고 직접 문자를 더해 만들어 넣으면 악의적인 사용자에 의해 SQL 인젝션 공격을 당할 수 있음
 	-	파라미터 바인딩 방식을 사용하면 파라미터의 값이 달라도 같은 쿼리로 인식해서 JPA는 JPQL을 SQL로 파싱한 결과를 재사용 할 수 있음
-	-	DB에서도 같은 쿼리는 파싱한 결과 재사용 가능하므로 전체
+	-	DB에서도 같은 쿼리는 파싱한 결과 재사용 가능하므로 전체 성능이 향상됨
+	-	**파리미터 바인딩 방식은 선택이 아닌 필수**
+### 10.2.3 프로젝션
+- 정의 : SELECT 절에 조회할 대상을 지정
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTkzMTYxMjAwMCwxOTU5MjE0MTkwLDE1Mj
-MwMTMwMTgsNTIzMzExMjQ4LC0yMDU2NTI0MzI2LDMxNzMwNzkz
-OCwyMDk3ODI4NjAyLDczMDk5ODExNl19
+eyJoaXN0b3J5IjpbLTEyNTg4NTM1NzksMTk1OTIxNDE5MCwxNT
+IzMDEzMDE4LDUyMzMxMTI0OCwtMjA1NjUyNDMyNiwzMTczMDc5
+MzgsMjA5NzgyODYwMiw3MzA5OTgxMTZdfQ==
 -->
