--- a/JPA/10.OQL.md
+++ b/JPA/10.OQL.md
@@ -284,9 +284,17 @@
 	-	DB에서도 같은 쿼리는 파싱한 결과 재사용 가능하므로 전체 성능이 향상됨
 	-	**파리미터 바인딩 방식은 선택이 아닌 필수**
 ### 10.2.3 프로젝션
-- 정의 : SELECT 절에 조회할 대상을 지정
+- 정의 : `SELECT 절에 조회할 대상을 지정하는 것`
+- 사용 : `[SELECT {프로젝션 대상} FROM]` 으로 대상을 선택
+- 대상 : 
+	- 엔티티
+	- 임베디드 타입
+	- 스칼라 타입
+		- 숫자, 문자 등 기본 데이터 타입
+- 엔티티 프로젝션
+
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTEyNTg4NTM1NzksMTk1OTIxNDE5MCwxNT
+eyJoaXN0b3J5IjpbLTE4MDA5NTk3NTUsMTk1OTIxNDE5MCwxNT
 IzMDEzMDE4LDUyMzMxMTI0OCwtMjA1NjUyNDMyNiwzMTczMDc5
 MzgsMjA5NzgyODYwMiw3MzA5OTgxMTZdfQ==
 -->
