--- a/JPA/10.OQL.md
+++ b/JPA/10.OQL.md
@@ -292,9 +292,14 @@
 	- 스칼라 타입
 		- 숫자, 문자 등 기본 데이터 타입
 - 엔티티 프로젝션
-
+	```sql
+	SELECT m FROM Member m; // 회원
+	SELECT m.team FROM Member m; // 팀
+	```
+	- 둘 다 엔티티를 프로젝션 대상으로 사용 = 원하는 객체를 바로 조회
+	- 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTE4MDA5NTk3NTUsMTk1OTIxNDE5MCwxNT
+eyJoaXN0b3J5IjpbLTIxMzA5MTY2NTEsMTk1OTIxNDE5MCwxNT
 IzMDEzMDE4LDUyMzMxMTI0OCwtMjA1NjUyNDMyNiwzMTczMDc5
 MzgsMjA5NzgyODYwMiw3MzA5OTgxMTZdfQ==
 -->
