--- a/JPA/10.OQL.md
+++ b/JPA/10.OQL.md
@@ -291,15 +291,20 @@
 	- 임베디드 타입
 	- 스칼라 타입
 		- 숫자, 문자 등 기본 데이터 타입
-- 엔티티 프로젝션
+- **엔티티 프로젝션**
 	```sql
 	SELECT m FROM Member m; // 회원
 	SELECT m.team FROM Member m; // 팀
 	```
 	- 둘 다 엔티티를 프로젝션 대상으로 사용 = 원하는 객체를 바로 조회
-	- 
+	- 컬럼을 하나하나 나열해서 조회해야 하는 SQL과는 차이가 있음
+	- **이렇게 조회한 엔티티는 영속성 컨텍스트에서 관리함**
+- **임베디드 타입 프로젝션**
+	- 엔티티와 거의 비슷하게 사용됨
+	- 조회의 시작점이 될 수 없다는 제약이 있음
+	- ex) 임베디드 타입인 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTIxMzA5MTY2NTEsMTk1OTIxNDE5MCwxNT
-IzMDEzMDE4LDUyMzMxMTI0OCwtMjA1NjUyNDMyNiwzMTczMDc5
-MzgsMjA5NzgyODYwMiw3MzA5OTgxMTZdfQ==
+eyJoaXN0b3J5IjpbNzk2OTg2NzUwLDE5NTkyMTQxOTAsMTUyMz
+AxMzAxOCw1MjMzMTEyNDgsLTIwNTY1MjQzMjYsMzE3MzA3OTM4
+LDIwOTc4Mjg2MDIsNzMwOTk4MTE2XX0=
 -->
