JPA/10.OQL.md updated from https://stackedit.io/

--- a/JPA/10.OQL.md
+++ b/JPA/10.OQL.md
@@ -302,9 +302,17 @@
 - **임베디드 타입 프로젝션**
 	- 엔티티와 거의 비슷하게 사용됨
 	- 조회의 시작점이 될 수 없다는 제약이 있음
-	- ex) 임베디드 타입인 
+	- ex) 임베디드 타입인 Address 를 조회의 시작점으로 사용하는 *잘못된 쿼리*
+	```java
+	String query = "SELECT a FROM Address a";
+	```
+	- Order 엔티티가 시작점
+	```java
+	String query = "SELECT o.address FROM Order o";
+	L
+	```
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbNzk2OTg2NzUwLDE5NTkyMTQxOTAsMTUyMz
+eyJoaXN0b3J5IjpbNjU2NzE2MzI5LDE5NTkyMTQxOTAsMTUyMz
 AxMzAxOCw1MjMzMTEyNDgsLTIwNTY1MjQzMjYsMzE3MzA3OTM4
 LDIwOTc4Mjg2MDIsNzMwOTk4MTE2XX0=
 -->
