JPA/10.OQL.md updated from https://stackedit.io/

--- a/JPA/10.OQL.md
+++ b/JPA/10.OQL.md
@@ -309,10 +309,20 @@
 	- Order 엔티티가 시작점
 	```java
 	String query = "SELECT o.address FROM Order o";
-	L
+	List<Address> addresses = em.createQuery(query, Address.class).getResultList();
 	```
+	- 실행된 쿼리
+	```sql
+	select
+		order.city,
+		order.street,
+		order.zipcode
+	from
+		Orders order
+	```
+
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbNjU2NzE2MzI5LDE5NTkyMTQxOTAsMTUyMz
-AxMzAxOCw1MjMzMTEyNDgsLTIwNTY1MjQzMjYsMzE3MzA3OTM4
-LDIwOTc4Mjg2MDIsNzMwOTk4MTE2XX0=
+eyJoaXN0b3J5IjpbLTEwMTMzODM5OTMsMTk1OTIxNDE5MCwxNT
+IzMDEzMDE4LDUyMzMxMTI0OCwtMjA1NjUyNDMyNiwzMTczMDc5
+MzgsMjA5NzgyODYwMiw3MzA5OTgxMTZdfQ==
 -->
