--- a/JPA/10.OQL.md
+++ b/JPA/10.OQL.md
@@ -320,9 +320,9 @@
 	from
 		Orders order
 	```
-
+	- **임베디드 타입은 엔티티 타입이 아니라서 영속성 컨텍스트에서 관리되지 않음**
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTEwMTMzODM5OTMsMTk1OTIxNDE5MCwxNT
-IzMDEzMDE4LDUyMzMxMTI0OCwtMjA1NjUyNDMyNiwzMTczMDc5
-MzgsMjA5NzgyODYwMiw3MzA5OTgxMTZdfQ==
+eyJoaXN0b3J5IjpbLTc4ODg3NjMyLDE5NTkyMTQxOTAsMTUyMz
+AxMzAxOCw1MjMzMTEyNDgsLTIwNTY1MjQzMjYsMzE3MzA3OTM4
+LDIwOTc4Mjg2MDIsNzMwOTk4MTE2XX0=
 -->
