JPA/10.OQL.md updated from https://stackedit.io/

--- a/JPA/10.OQL.md
+++ b/JPA/10.OQL.md
@@ -321,8 +321,12 @@
 		Orders order
 	```
 	- **임베디드 타입은 엔티티 타입이 아니라서 영속성 컨텍스트에서 관리되지 않음**
+- 스칼라 타입 프로젝션
+	- 숫자, 문자, 날짜와 같은 기본 데이터 타입
+	- ex 1) 전체 회원의 이름 조회
+
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTc4ODg3NjMyLDE5NTkyMTQxOTAsMTUyMz
-AxMzAxOCw1MjMzMTEyNDgsLTIwNTY1MjQzMjYsMzE3MzA3OTM4
-LDIwOTc4Mjg2MDIsNzMwOTk4MTE2XX0=
+eyJoaXN0b3J5IjpbLTEzNjkwMTMyNzMsLTc4ODg3NjMyLDE5NT
+kyMTQxOTAsMTUyMzAxMzAxOCw1MjMzMTEyNDgsLTIwNTY1MjQz
+MjYsMzE3MzA3OTM4LDIwOTc4Mjg2MDIsNzMwOTk4MTE2XX0=
 -->
