JPA/10.OQL.md updated from https://stackedit.io/

--- a/JPA/10.OQL.md
+++ b/JPA/10.OQL.md
@@ -324,9 +324,15 @@
 - 스칼라 타입 프로젝션
 	- 숫자, 문자, 날짜와 같은 기본 데이터 타입
 	- ex 1) 전체 회원의 이름 조회
-
+	```java
+	List<String> username = em.createQuery("SELECT username FROM Member m", Address.class).getResultList();
+	```
+	- ex 2) 중복 데이터 제거 (distinct)
+	```java
+	SELECT username FROM Member m
+	```
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTEzNjkwMTMyNzMsLTc4ODg3NjMyLDE5NT
-kyMTQxOTAsMTUyMzAxMzAxOCw1MjMzMTEyNDgsLTIwNTY1MjQz
-MjYsMzE3MzA3OTM4LDIwOTc4Mjg2MDIsNzMwOTk4MTE2XX0=
+eyJoaXN0b3J5IjpbMjAxNTEyODE2MywtNzg4ODc2MzIsMTk1OT
+IxNDE5MCwxNTIzMDEzMDE4LDUyMzMxMTI0OCwtMjA1NjUyNDMy
+NiwzMTczMDc5MzgsMjA5NzgyODYwMiw3MzA5OTgxMTZdfQ==
 -->
