JPA/10.OQL.md updated from https://stackedit.io/

--- a/JPA/10.OQL.md
+++ b/JPA/10.OQL.md
@@ -325,14 +325,18 @@
 	- 숫자, 문자, 날짜와 같은 기본 데이터 타입
 	- ex 1) 전체 회원의 이름 조회
 	```java
-	List<String> username = em.createQuery("SELECT username FROM Member m", Address.class).getResultList();
+	List<String> username = em.createQuery("SELECT username FROM Member m", String.class).getResultList();
 	```
 	- ex 2) 중복 데이터 제거 (distinct)
+	```sql
+	SELECT distinct username FROM Member m
+	```
+	- ex 3) 통계도 주로 스칼라 타입 사용
 	```java
-	SELECT username FROM Member m
+	Double username = em.createQuery("SELECT avg(o.orderAmount) FROM Order m", Double.class).getSingleResult();
 	```
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMjAxNTEyODE2MywtNzg4ODc2MzIsMTk1OT
-IxNDE5MCwxNTIzMDEzMDE4LDUyMzMxMTI0OCwtMjA1NjUyNDMy
-NiwzMTczMDc5MzgsMjA5NzgyODYwMiw3MzA5OTgxMTZdfQ==
+eyJoaXN0b3J5IjpbLTE1ODIyNjg4NDksLTc4ODg3NjMyLDE5NT
+kyMTQxOTAsMTUyMzAxMzAxOCw1MjMzMTEyNDgsLTIwNTY1MjQz
+MjYsMzE3MzA3OTM4LDIwOTc4Mjg2MDIsNzMwOTk4MTE2XX0=
 -->
