JPA/10.OQL.md updated from https://stackedit.io/

--- a/JPA/10.OQL.md
+++ b/JPA/10.OQL.md
@@ -333,10 +333,13 @@
 	```
 	- ex 3) 통계도 주로 스칼라 타입 사용
 	```java
-	Double username = em.createQuery("SELECT avg(o.orderAmount) FROM Order m", Double.class).getSingleResult();
+	Double username = em.createQuery("SELECT avg(o.orderAmount) FROM Order o", Double.class).getSingleResult();
 	```
+- 여러 값 조회
+	- 여러 값을 선택하면 TypedQuery 가 아니라 Query 를 사용해야 한다
+	- 스칼라 타입 뿐ㅁ
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTE1ODIyNjg4NDksLTc4ODg3NjMyLDE5NT
-kyMTQxOTAsMTUyMzAxMzAxOCw1MjMzMTEyNDgsLTIwNTY1MjQz
-MjYsMzE3MzA3OTM4LDIwOTc4Mjg2MDIsNzMwOTk4MTE2XX0=
+eyJoaXN0b3J5IjpbNTcxODQxNzAwLC03ODg4NzYzMiwxOTU5Mj
+E0MTkwLDE1MjMwMTMwMTgsNTIzMzExMjQ4LC0yMDU2NTI0MzI2
+LDMxNzMwNzkzOCwyMDk3ODI4NjAyLDczMDk5ODExNl19
 -->
