--- a/JPA/10.OQL.md
+++ b/JPA/10.OQL.md
@@ -337,9 +337,19 @@
 	```
 - 여러 값 조회
 	- 여러 값을 선택하면 TypedQuery 가 아니라 Query 를 사용해야 한다
-	- 스칼라 타입 뿐ㅁ
+	- 스칼라 타입 뿐만 아니라 엔티티 타입도 여러 값을 함께 조회 가능
+		- ex)
+	```java
+	List<Object[]> resultList = em.createQuery("SELECT o.member, o.product, o.orderAmount m.age FROM Order o").getResultList();
+
+	for (Object m : resultList) {
+		Object[] result = (Object[]) o; // 결과가 둘 이상이면 Object[] 반환
+		System.out.println("username = " + result[0]);
+		System.out.println("age = " + result[1]);
+	}
+	```
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbNTcxODQxNzAwLC03ODg4NzYzMiwxOTU5Mj
+eyJoaXN0b3J5IjpbOTU0MjAzMzgyLC03ODg4NzYzMiwxOTU5Mj
 E0MTkwLDE1MjMwMTMwMTgsNTIzMzExMjQ4LC0yMDU2NTI0MzI2
 LDMxNzMwNzkzOCwyMDk3ODI4NjAyLDczMDk5ODExNl19
 -->
