JPA/10.OQL.md updated from https://stackedit.io/

--- a/JPA/10.OQL.md
+++ b/JPA/10.OQL.md
@@ -339,17 +339,18 @@
 	- 여러 값을 선택하면 TypedQuery 가 아니라 Query 를 사용해야 한다
 	- 스칼라 타입 뿐만 아니라 엔티티 타입도 여러 값을 함께 조회 가능
 		- ex)
-	```java
-	List<Object[]> resultList = em.createQuery("SELECT o.member, o.product, o.orderAmount m.age FROM Order o").getResultList();
+		```java
+		List<Object[]> resultList = em.createQuery("SELECT o.member, o.product, o.orderAmount m.age FROM Order o").getResultList();
 
-	for (Object m : resultList) {
-		Object[] result = (Object[]) o; // 결과가 둘 이상이면 Object[] 반환
-		System.out.println("username = " + result[0]);
-		System.out.println("age = " + result[1]);
-	}
-	```
+		for (Object[] row : resultList) {
+			Member member = (Member) row[0]; // 엔티티
+			Product product = (Product) row[1];
+			int orderAmount = (Product) row[2];
+		}
+		```
+		- 이때 조회된 엔티티는 영속석 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbOTU0MjAzMzgyLC03ODg4NzYzMiwxOTU5Mj
-E0MTkwLDE1MjMwMTMwMTgsNTIzMzExMjQ4LC0yMDU2NTI0MzI2
-LDMxNzMwNzkzOCwyMDk3ODI4NjAyLDczMDk5ODExNl19
+eyJoaXN0b3J5IjpbLTE4NjQ5MDk2NTEsLTc4ODg3NjMyLDE5NT
+kyMTQxOTAsMTUyMzAxMzAxOCw1MjMzMTEyNDgsLTIwNTY1MjQz
+MjYsMzE3MzA3OTM4LDIwOTc4Mjg2MDIsNzMwOTk4MTE2XX0=
 -->
