JPA/10.OQL.md updated from https://stackedit.io/

--- a/JPA/10.OQL.md
+++ b/JPA/10.OQL.md
@@ -337,7 +337,7 @@
 	```
 - 여러 값 조회
 	- 여러 값을 선택하면 TypedQuery 가 아니라 Query 를 사용해야 한다
-	- 스칼라 타입 뿐만 아니라 엔티티 타입도 여러 값을 함께 조회 가능
+	- 스칼라 타입 뿐만 아니라 **엔티티 타입도 여러 값을 함께 조회 가능**
 		- ex)
 		```java
 		List<Object[]> resultList = em.createQuery("SELECT o.member, o.product, o.orderAmount m.age FROM Order o").getResultList();
@@ -348,9 +348,15 @@
 			int orderAmount = (Product) row[2];
 		}
 		```
-		- 이때 조회된 엔티티는 영속석 
+		- 이때 조회된 엔티티는 **영속성 컨텍스트에서 관리됨**
+- NEW 명령어
+	- 객체 변환 작업 시 사용
+	- ex)
+	```java
+	TypedQuery<UserDto> resultList = em.createQuery("SELECT o.member, o.product, o.orderAmount m.age FROM Order o").getResultList();
+	```
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTE4NjQ5MDk2NTEsLTc4ODg3NjMyLDE5NT
-kyMTQxOTAsMTUyMzAxMzAxOCw1MjMzMTEyNDgsLTIwNTY1MjQz
-MjYsMzE3MzA3OTM4LDIwOTc4Mjg2MDIsNzMwOTk4MTE2XX0=
+eyJoaXN0b3J5IjpbMTA1MTIyMTUzNCwtNzg4ODc2MzIsMTk1OT
+IxNDE5MCwxNTIzMDEzMDE4LDUyMzMxMTI0OCwtMjA1NjUyNDMy
+NiwzMTczMDc5MzgsMjA5NzgyODYwMiw3MzA5OTgxMTZdfQ==
 -->
