JPA/10.OQL.md updated from https://stackedit.io/

--- a/JPA/10.OQL.md
+++ b/JPA/10.OQL.md
@@ -353,10 +353,13 @@
 	- 객체 변환 작업 시 사용
 	- ex)
 	```java
-	TypedQuery<UserDto> resultList = em.createQuery("SELECT o.member, o.product, o.orderAmount m.age FROM Order o").getResultList();
+	TypedQuery<UserDto> query = em.createQuery("SELECT new test.UserDto(m.username, m.age) FROM Member m", UserDto.class);
+	List<UserDto> resultList = query.getResultList();
 	```
+	- 주의 사항
+		- 1. 패키지 명을 포함한 전체 클래스 명을 입력해야 한다
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTA1MTIyMTUzNCwtNzg4ODc2MzIsMTk1OT
+eyJoaXN0b3J5IjpbMjE0NTkzMTkxOCwtNzg4ODc2MzIsMTk1OT
 IxNDE5MCwxNTIzMDEzMDE4LDUyMzMxMTI0OCwtMjA1NjUyNDMy
 NiwzMTczMDc5MzgsMjA5NzgyODYwMiw3MzA5OTgxMTZdfQ==
 -->
