JPA/10.OQL.md updated from https://stackedit.io/

--- a/JPA/10.OQL.md
+++ b/JPA/10.OQL.md
@@ -359,7 +359,7 @@
 
 		public UserDto(String username, int age) {
 			this.username = username;
-			
+			this.age = age;
 		}
 	}
 
@@ -369,8 +369,27 @@
 	- 주의 사항
 		1. **패키지 명을 포함한 전체 클래스 명을 입력**해야 한다
 		2.  **순서와 타입이 일치하는 생성자가 필요**하다
+### 10.2.4 페이징 API
+- JPA는 페이징을 다음의 두 API 로 추상화 함
+	1. setFirstResult(int startPosition) : 조회 시작 위치 (0부터 시작함)
+	2. setMaxResults(int maxResult) : 조회할 데이터 수
+- ex)
+	```java
+	public class UserDto {
+		private String username;
+		private int age;
+
+		public UserDto(String username, int age) {
+			this.username = username;
+			this.age = age;
+		}
+	}
+
+	TypedQuery<UserDto> query = em.createQuery("SELECT new test.com.dto.UserDto(m.username, m.age) FROM Member m", UserDto.class);
+	List<UserDto> resultList = query.getResultList();
+	```
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTA5NjYzNDgwNywtNzg4ODc2MzIsMTk1OT
-IxNDE5MCwxNTIzMDEzMDE4LDUyMzMxMTI0OCwtMjA1NjUyNDMy
-NiwzMTczMDc5MzgsMjA5NzgyODYwMiw3MzA5OTgxMTZdfQ==
+eyJoaXN0b3J5IjpbMTY4MzI2NDAsLTc4ODg3NjMyLDE5NTkyMT
+QxOTAsMTUyMzAxMzAxOCw1MjMzMTEyNDgsLTIwNTY1MjQzMjYs
+MzE3MzA3OTM4LDIwOTc4Mjg2MDIsNzMwOTk4MTE2XX0=
 -->
