JPA/10.OQL.md updated from https://stackedit.io/

--- a/JPA/10.OQL.md
+++ b/JPA/10.OQL.md
@@ -375,21 +375,15 @@
 	2. setMaxResults(int maxResult) : 조회할 데이터 수
 - ex)
 	```java
-	public class UserDto {
-		private String username;
-		private int age;
-
-		public UserDto(String username, int age) {
-			this.username = username;
-			this.age = age;
-		}
-	}
-
-	TypedQuery<UserDto> query = em.createQuery("SELECT new test.com.dto.UserDto(m.username, m.age) FROM Member m", UserDto.class);
-	List<UserDto> resultList = query.getResultList();
+	TypedQuery<Member> query = em.createQuery("SELECT m FROM Member m order by m.username desc", Member.class);
+	
+	query.setFirstResult(10);
+	query.setMaxResult(20);
+	List<Member> resultList = query.getResultList();
 	```
+	- 11 번째부터 총 20건의 데이터 ㅈ
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTY4MzI2NDAsLTc4ODg3NjMyLDE5NTkyMT
-QxOTAsMTUyMzAxMzAxOCw1MjMzMTEyNDgsLTIwNTY1MjQzMjYs
-MzE3MzA3OTM4LDIwOTc4Mjg2MDIsNzMwOTk4MTE2XX0=
+eyJoaXN0b3J5IjpbLTQxNDA1OTY5MCwtNzg4ODc2MzIsMTk1OT
+IxNDE5MCwxNTIzMDEzMDE4LDUyMzMxMTI0OCwtMjA1NjUyNDMy
+NiwzMTczMDc5MzgsMjA5NzgyODYwMiw3MzA5OTgxMTZdfQ==
 -->
