JPA/10.OQL.md updated from https://stackedit.io/

--- a/JPA/10.OQL.md
+++ b/JPA/10.OQL.md
@@ -381,9 +381,12 @@
 	query.setMaxResult(20);
 	List<Member> resultList = query.getResultList();
 	```
-	- 11 번째부터 총 20건의 데이터 ㅈ
+	- 11 번째부터 총 20건의 데이터 조회 (11~30 번 데이터 조회)
+- DB dialect 때문에 DB 마다 다른 페이징 처리를 같은 API 로 할 수 있음
+### 10.2.5 집합과 정렬
+- 집합함수
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTQxNDA1OTY5MCwtNzg4ODc2MzIsMTk1OT
-IxNDE5MCwxNTIzMDEzMDE4LDUyMzMxMTI0OCwtMjA1NjUyNDMy
-NiwzMTczMDc5MzgsMjA5NzgyODYwMiw3MzA5OTgxMTZdfQ==
+eyJoaXN0b3J5IjpbLTEyNDE2MjQ3NDQsLTc4ODg3NjMyLDE5NT
+kyMTQxOTAsMTUyMzAxMzAxOCw1MjMzMTEyNDgsLTIwNTY1MjQz
+MjYsMzE3MzA3OTM4LDIwOTc4Mjg2MDIsNzMwOTk4MTE2XX0=
 -->
