JPA/10.OQL.md updated from https://stackedit.io/

--- a/JPA/10.OQL.md
+++ b/JPA/10.OQL.md
@@ -384,9 +384,23 @@
 	- 11 번째부터 총 20건의 데이터 조회 (11~30 번 데이터 조회)
 - DB dialect 때문에 DB 마다 다른 페이징 처리를 같은 API 로 할 수 있음
 ### 10.2.5 집합과 정렬
-- 집합함수
+- 집합함수 및 통계 정보를 구할 때 사용
+- ex) 코드는 순서대로 회원수, 나이 합, 평균 나이, 최대 나이, 최소 나이를 조회
+	```sql
+	select
+		count(m), // 회원수
+		sum(m.age), // 나이 합
+		avg(m.age), // 평균 나이
+		max(m.age), // 최대 나이
+		min(m.age) // 최소 나이
+	from
+		Member m
+	```
+- 집합 함수
+	- 종류
+		- count : 결과 수를 구함 (반환 타
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTEyNDE2MjQ3NDQsLTc4ODg3NjMyLDE5NT
-kyMTQxOTAsMTUyMzAxMzAxOCw1MjMzMTEyNDgsLTIwNTY1MjQz
-MjYsMzE3MzA3OTM4LDIwOTc4Mjg2MDIsNzMwOTk4MTE2XX0=
+eyJoaXN0b3J5IjpbLTYxNTQ1ODA3LC03ODg4NzYzMiwxOTU5Mj
+E0MTkwLDE1MjMwMTMwMTgsNTIzMzExMjQ4LC0yMDU2NTI0MzI2
+LDMxNzMwNzkzOCwyMDk3ODI4NjAyLDczMDk5ODExNl19
 -->
