JPA/10.OQL.md updated from https://stackedit.io/

--- a/JPA/10.OQL.md
+++ b/JPA/10.OQL.md
@@ -398,9 +398,24 @@
 	```
 - 집합 함수
 	- 종류
-		- count : 결과 수를 구함 (반환 타
+		- count
+			- 결과 수를 구함
+			- 반환 타입 : **long**
+		- max, min
+			- 최대, 최소 값을 구함
+			- **문자, 숫자, 날짜** 등에 사용
+		- avg
+			- 평균값
+			- **숫자 타입**에만 사용 가능
+			- 반환 타입 : double
+		- sum
+			- 합
+			- **숫자 타입**에만 사용 가능
+			- 반환 타입
+				- 정수합 : Long
+				- 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTYxNTQ1ODA3LC03ODg4NzYzMiwxOTU5Mj
-E0MTkwLDE1MjMwMTMwMTgsNTIzMzExMjQ4LC0yMDU2NTI0MzI2
-LDMxNzMwNzkzOCwyMDk3ODI4NjAyLDczMDk5ODExNl19
+eyJoaXN0b3J5IjpbMTYwMDgyNjM0MiwtNzg4ODc2MzIsMTk1OT
+IxNDE5MCwxNTIzMDEzMDE4LDUyMzMxMTI0OCwtMjA1NjUyNDMy
+NiwzMTczMDc5MzgsMjA5NzgyODYwMiw3MzA5OTgxMTZdfQ==
 -->
