JPA/10.OQL.md updated from https://stackedit.io/

--- a/JPA/10.OQL.md
+++ b/JPA/10.OQL.md
@@ -413,9 +413,15 @@
 			- **숫자 타입**에만 사용 가능
 			- 반환 타입
 				- 정수합 : Long
-				- 
+				- 소수합 : Double
+				- BigInteger 합 : BigInteger
+				- BigDecimal 합 : BigDecimal
+- 집합 함수 사용 시 참고사항
+	- **null 값은 무시하므로 통계에 잡히지 않음 (distinct 가 있어도 무시함)**
+	- **값이 없는데 sum, avg, max, min을 사용하면 null 값이 됨 (count는 0)**
+	- 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTYwMDgyNjM0MiwtNzg4ODc2MzIsMTk1OT
+eyJoaXN0b3J5IjpbLTIyNjUxMDg0NSwtNzg4ODc2MzIsMTk1OT
 IxNDE5MCwxNTIzMDEzMDE4LDUyMzMxMTI0OCwtMjA1NjUyNDMy
 NiwzMTczMDc5MzgsMjA5NzgyODYwMiw3MzA5OTgxMTZdfQ==
 -->
