JPA/10.OQL.md updated from https://stackedit.io/

--- a/JPA/10.OQL.md
+++ b/JPA/10.OQL.md
@@ -419,9 +419,13 @@
 - 집합 함수 사용 시 참고사항
 	- **null 값은 무시하므로 통계에 잡히지 않음 (distinct 가 있어도 무시함)**
 	- **값이 없는데 sum, avg, max, min을 사용하면 null 값이 됨 (count는 0)**
+	- **Distinct 를 집합 함수 안에 사용해서 중복된 값을 제거하고 나서 집합을 구할 수 있음**
+		- ex) select COUNT(DISTINCT m.age) from Member m)
+	- **Distinct를 count 에서 사용할 때 *임베디드 타입은 지원하지 않음***
+- GROUP BY, HAVING
 	- 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTIyNjUxMDg0NSwtNzg4ODc2MzIsMTk1OT
+eyJoaXN0b3J5IjpbMTY1NTgyMDMzOCwtNzg4ODc2MzIsMTk1OT
 IxNDE5MCwxNTIzMDEzMDE4LDUyMzMxMTI0OCwtMjA1NjUyNDMy
 NiwzMTczMDc5MzgsMjA5NzgyODYwMiw3MzA5OTgxMTZdfQ==
 -->
