JPA/10.OQL.md updated from https://stackedit.io/

--- a/JPA/10.OQL.md
+++ b/JPA/10.OQL.md
@@ -423,9 +423,17 @@
 		- ex) select COUNT(DISTINCT m.age) from Member m)
 	- **Distinct를 count 에서 사용할 때 *임베디드 타입은 지원하지 않음***
 - GROUP BY, HAVING
-	- 
+	- GROUP BY
+		- 특정 그룹끼리 묶어줌
+		- ex) 팀 이름을 기준으로 그룹 별로 통계
+		```sql
+		select t.name, count(m.age), sum(m.age), avg(m.age), max(m.age), min(m.age)
+		from Member m left join m.team t
+		group by t.name
+		```
+		- 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTY1NTgyMDMzOCwtNzg4ODc2MzIsMTk1OT
+eyJoaXN0b3J5IjpbLTc2NTA0NDU4NywtNzg4ODc2MzIsMTk1OT
 IxNDE5MCwxNTIzMDEzMDE4LDUyMzMxMTI0OCwtMjA1NjUyNDMy
 NiwzMTczMDc5MzgsMjA5NzgyODYwMiw3MzA5OTgxMTZdfQ==
 -->
