JPA/10.OQL.md updated from https://stackedit.io/

--- a/JPA/10.OQL.md
+++ b/JPA/10.OQL.md
@@ -426,14 +426,25 @@
 	- GROUP BY
 		- 특정 그룹끼리 묶어줌
 		- ex) 팀 이름을 기준으로 그룹 별로 통계
-		```sql
-		select t.name, count(m.age), sum(m.age), avg(m.age), max(m.age), min(m.age)
-		from Member m left join m.team t
-		group by t.name
-		```
-		- 
+	```sql
+	select t.name, count(m.age), sum(m.age), avg(m.age), max(m.age), min(m.age)
+	from Member m left join m.team t
+	group by t.name
+	```
+	- HAVING
+		- GroupBy와 함께 사용함
+		- GroupBy 결과를 필터링
+		- ex) 그룹 별로 평균 나이가 10살 이상인 그룹 조회
+	```sql
+	select t.name, count(m.age), sum(m.age), avg(m.age), max(m.age), min(m.age)
+	from Member m left join m.team t
+	group by t.name
+	having avg(m.age) >= 10
+	```
+	- 문법
+		- groupby : GROUP 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTc2NTA0NDU4NywtNzg4ODc2MzIsMTk1OT
+eyJoaXN0b3J5IjpbLTM3NjU0NzU3OSwtNzg4ODc2MzIsMTk1OT
 IxNDE5MCwxNTIzMDEzMDE4LDUyMzMxMTI0OCwtMjA1NjUyNDMy
 NiwzMTczMDc5MzgsMjA5NzgyODYwMiw3MzA5OTgxMTZdfQ==
 -->
