--- a/JPA/10.OQL.md
+++ b/JPA/10.OQL.md
@@ -442,9 +442,14 @@
 	having avg(m.age) >= 10
 	```
 	- 문법
-		- groupby : GROUP 
+		- groupby : GROUP BY {단일값 경로 | 별칭}+
+		- having : HAVING 조건식
+	- 보통 리포팅 쿼리나 통계 쿼리라 부름
+	- 주의 
+		- 보통 전체 데이터를 대상으로 수행하므로 실시간으로 사용하기엔 부담이 큼
+		- 결과가 많다면 통계 결과만 저장하는 테이블을 별도로 만들어 두고 사용자가 적은 새벽에 통계 쿼리를 실행해서 보관하는 것이 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTM3NjU0NzU3OSwtNzg4ODc2MzIsMTk1OT
-IxNDE5MCwxNTIzMDEzMDE4LDUyMzMxMTI0OCwtMjA1NjUyNDMy
-NiwzMTczMDc5MzgsMjA5NzgyODYwMiw3MzA5OTgxMTZdfQ==
+eyJoaXN0b3J5IjpbLTE2NDU4MjgzNjAsLTc4ODg3NjMyLDE5NT
+kyMTQxOTAsMTUyMzAxMzAxOCw1MjMzMTEyNDgsLTIwNTY1MjQz
+MjYsMzE3MzA3OTM4LDIwOTc4Mjg2MDIsNzMwOTk4MTE2XX0=
 -->
