JPA/10.OQL.md updated from https://stackedit.io/

--- a/JPA/10.OQL.md
+++ b/JPA/10.OQL.md
@@ -446,10 +446,18 @@
 		- having : HAVING 조건식
 	- 보통 리포팅 쿼리나 통계 쿼리라 부름
 	- 주의 
-		- 보통 전체 데이터를 대상으로 수행하므로 실시간으로 사용하기엔 부담이 큼
-		- 결과가 많다면 통계 결과만 저장하는 테이블을 별도로 만들어 두고 사용자가 적은 새벽에 통계 쿼리를 실행해서 보관하는 것이 
+		- 보통 전체 데이터를 대상으로 수행하므로 *실시간으로 사용하기엔 부담이 큼*
+		- 결과가 많다면 통계 결과만 저장하는 테이블을 별도로 만들어 두고 사용자가 적은 새벽에 통계 쿼리를 실행해서 보관하는 것이 좋음
+- 정렬 (Order By)
+	- 결과를 정렬
+	- ex) 나이 순으로 내림차순 정렬, 나이가 같으면 오름차순 정렬
+	```sql
+	select m from Member order by m.age desc, m.username asc
+	```
+	- 문법
+		- ORDER BY {상태피}
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTE2NDU4MjgzNjAsLTc4ODg3NjMyLDE5NT
-kyMTQxOTAsMTUyMzAxMzAxOCw1MjMzMTEyNDgsLTIwNTY1MjQz
-MjYsMzE3MzA3OTM4LDIwOTc4Mjg2MDIsNzMwOTk4MTE2XX0=
+eyJoaXN0b3J5IjpbMTc4ODkzMTA0OSwtNzg4ODc2MzIsMTk1OT
+IxNDE5MCwxNTIzMDEzMDE4LDUyMzMxMTI0OCwtMjA1NjUyNDMy
+NiwzMTczMDc5MzgsMjA5NzgyODYwMiw3MzA5OTgxMTZdfQ==
 -->
