--- a/JPA/10.OQL.md
+++ b/JPA/10.OQL.md
@@ -455,9 +455,16 @@
 	select m from Member order by m.age desc, m.username asc
 	```
 	- 문법
-		- ORDER BY {상태피}
+		- ORDER BY {상태필드 경로 | 결과 변수 [ASC | DESC]}+
+			- ASC : 오름차순
+			- DESC : 내림차순
+	- 상태필드
+		- t.name 같이 **객체의 상태를 나타내는 필드**
+	- 결과 변수
+		- select 절에 나타나는 값
+		- ex) cnt 가 결과 변수
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTc4ODkzMTA0OSwtNzg4ODc2MzIsMTk1OT
+eyJoaXN0b3J5IjpbMjA3NzY2OTAwOCwtNzg4ODc2MzIsMTk1OT
 IxNDE5MCwxNTIzMDEzMDE4LDUyMzMxMTI0OCwtMjA1NjUyNDMy
 NiwzMTczMDc5MzgsMjA5NzgyODYwMiw3MzA5OTgxMTZdfQ==
 -->
