RealMysql/4. 트랜잭션과 잠금.md updated from https://stackedit.io/

--- a/RealMysql/4. 트랜잭션과 잠금.md
+++ b/RealMysql/4. 트랜잭션과 잠금.md
@@ -1,6 +1,8 @@
-4.4 InnoDB 스토리지 엔진의 잠금
+# 4.4 InnoDB 스토리지 엔진의 잠금
 
-
+##### 잠금 정보 조회
+* MySQL 5.0 이하 : `SHOW ENGINE INNODB STATUS`
+* MySQL 5.1 이상 : INFORMATION_SCHEMA
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTg4NTE4MDk0Nl19
+eyJoaXN0b3J5IjpbLTEzNzg5NDU1MzZdfQ==
 -->
