RealMysql/4. 트랜잭션과 잠금.md updated from https://stackedit.io/

--- a/RealMysql/4. 트랜잭션과 잠금.md
+++ b/RealMysql/4. 트랜잭션과 잠금.md
@@ -2,7 +2,12 @@
 
 ##### 잠금 정보 조회
 * MySQL 5.0 이하 : `SHOW ENGINE INNODB STATUS`
-* MySQL 5.1 이상 : INFORMATION_SCHEMA
+* MySQL 5.1 이상 : 
+	* INFORMATION_SCHEMA
+		* INNODB_TRX : 트랜잭션 정보
+		* INNODB_LOCKS : 해당 잠금을 어느 트랜잭션이 가지고 있는지 조회
+		* INNODB_LOCK_WAITS : 잠금 대기 조회
+	* 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTEzNzg5NDU1MzZdfQ==
+eyJoaXN0b3J5IjpbLTcxOTU5OTQyNV19
 -->
